# devsecops-serverless-aws-lambda

./: .dockerignore  .gitignore  AWS_policy.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  install.sh  pyproject.toml  Пояснювальна_записка.docx
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
cli/: devsecops_cli.py  pyproject.toml
cli/devsecops_cli/: __init__.py  __main__.py  aws.py  config.py  doctor.py  github.py  main.py  render.py
cli/tests/: test_devsecops_cli.py
cli/tests/golden/: github-setup.sh  github-variables.env  terraform_generated.auto.tfvars.golden
docs/: bring-your-own-image.md  command-inventory.md  cost-estimation.md  distribution.md  example-workload-template.md  first-successful-pipeline.md  generated-artifacts.md  known-limitations.md  production-deployment-evidence.md  release-checklist.md  release-v0.1.0.md  release-v0.10.0.md  release-v0.11.0.md  release-v0.12.0.md  release-v0.2.0.md  release-v0.3.0.md  release-v0.4.0.md  release-v0.4.1.md  release-v0.5.0.md  release-v0.6.0.md  release-v0.6.1.md  release-v0.7.0.md  release-v0.8.0.md  scanning-tools.md  security-controls.md  security-model.md  stability-contract.md  troubleshooting.md  upgrade-guide.md  v1.0.0-release-candidate-checklist.md
docs/runbooks/: README.md  failed-rollback.md  failed-terraform-apply.md  failed-terraform-plan.md  failed-validation.md  missing-image.md
frontend/: index.html  script.js  style.css
lambda_function/: lambda_function.py  requirements.txt
terraform/: .terraform.lock.hcl  apigateway.tf  backend.tf  ecr.tf  iam.tf  kms.tf  lambda.tf  locals.tf  main.tf  moved.tf  outputs.tf  provider.tf  s3.tf  sqs.tf  variables.tf
terraform/bootstrap/: main.tf  outputs.tf  variables.tf
terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/kms/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
