[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devsecops-pipeline-cli"
version = "0.7.0"
description = "CLI for creating, validating, and rendering a secure AWS Lambda delivery pipeline."
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.scripts]
devsecops = "devsecops_cli.main:main"

[project.optional-dependencies]
tui = [
  "rich>=13.7",
  "textual>=0.79",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["devsecops_cli*"]
